--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,28 +1,127 @@
-# This file configures the analyzer, which statically analyzes Dart code to
-# check for errors, warnings, and lints.
-#
-# The issues identified by the analyzer are surfaced in the UI of Dart-enabled
-# IDEs (https://dart.dev/tools#ides-and-editors). The analyzer can also be
-# invoked from the command line by running `flutter analyze`.
-
-# The following line activates a set of recommended lints for Flutter apps,
-# packages, and plugins designed to encourage good coding practices.
 include: package:flutter_lints/flutter.yaml
 
 linter:
-  # The lint rules applied to this project can be customized in the
-  # section below to disable rules from the `package:flutter_lints/flutter.yaml`
-  # included above or to enable additional rules. A list of all available lints
-  # and their documentation is published at https://dart.dev/lints.
-  #
-  # Instead of disabling a lint rule for the entire project in the
-  # section below, it can also be suppressed for a single line of code
-  # or a specific dart file by using the `// ignore: name_of_lint` and
-  # `// ignore_for_file: name_of_lint` syntax on the line or in the file
-  # producing the lint.
   rules:
-    # avoid_print: false  # Uncomment to disable the `avoid_print` rule
-    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+    - always_declare_return_types
+    - annotate_overrides
+    - avoid_empty_else
+    - avoid_init_to_null
+    - avoid_void_async
+    - await_only_futures
+    - always_use_package_imports
+    - avoid_implementing_value_types
+    - avoid_null_checks_in_equality_operators
+    - avoid_renaming_method_parameters
+    - avoid_return_types_on_setters
+    - avoid_returning_null
+    - avoid_returning_null_for_void
+    - avoid_returning_null_for_future
+    - avoid_types_as_parameter_names
+    - avoid_relative_lib_imports
+    - avoid_unused_constructor_parameters
+    - camel_case_types
+    - cancel_subscriptions
+    - cascade_invocations
+    - comment_references
+    - constant_identifier_names
+    - control_flow_in_finally
+    - directives_ordering
+    - empty_catches
+    - empty_constructor_bodies
+    - empty_statements
+    - hash_and_equals
+    - prefer_void_to_null
+    - avoid_print
+    - avoid_bool_literals_in_conditional_expressions
+    - prefer_if_null_operators
+    - file_names
+    - unnecessary_this
+    - omit_local_variable_types
+    - prefer_single_quotes
+    - always_require_non_null_named_parameters
+    - avoid_single_cascade_in_expression_statements
+    - camel_case_extensions
+    - curly_braces_in_flow_control_structures
+    - library_names
+    - no_duplicate_case_values
+    - null_closures
+    - prefer_adjacent_string_concatenation
+    - prefer_collection_literals
+    - prefer_conditional_assignment
+    - prefer_contains
+    - prefer_equal_for_default_values
+    - prefer_final_fields
+    - sort_constructors_first
+    - avoid_slow_async_io
+    - avoid_type_to_string
+    - avoid_web_libraries_in_flutter
+    - close_sinks
+    - invariant_booleans
+    - literal_only_boolean_expressions
+    - no_adjacent_strings_in_list
+    - no_logic_in_create_state
+    - test_types_in_equals
+    - throw_in_finally
+    - unnecessary_statements
+    - unrelated_type_equality_checks
+    - use_build_context_synchronously
+    - use_key_in_widget_constructors
+    - valid_regexps
+    - always_put_control_body_on_new_line
+    - avoid_catches_without_on_clauses
+    - avoid_catching_errors
+    - avoid_classes_with_only_static_members
+    - avoid_double_and_int_checks
+    - avoid_equals_and_hash_code_on_mutable_classes
+    - avoid_escaping_inner_quotes
+    - avoid_field_initializers_in_const_classes
+    - avoid_final_parameters
+    - avoid_function_literals_in_foreach_calls
+    - avoid_js_rounded_ints
+    - avoid_multiple_declarations_per_line
+    - avoid_private_typedef_functions
+    - avoid_redundant_argument_values
+    - avoid_returning_this
+    - avoid_setters_without_getters
+    - avoid_shadowing_type_parameters
+    - avoid_unnecessary_containers
+    - cast_nullable_to_non_nullable
+    - conditional_uri_does_not_exist
+    - deprecated_consistency
+    - exhaustive_cases
+    - flutter_style_todos
+    - implementation_imports
+    - join_return_with_assignment
+    - leading_newlines_in_multiline_strings
+    - library_prefixes
+    - library_private_types_in_public_api
+    - no_leading_underscores_for_library_prefixes
+    - no_leading_underscores_for_local_identifiers
+    - null_check_on_nullable_type_parameter
+    - only_throw_errors
+    - prefer_const_constructors
+    - prefer_const_declarations
+    - prefer_is_empty
+    - prefer_is_not_operator
+    - prefer_null_aware_method_calls
+    - prefer_null_aware_operators
+    - require_trailing_commas
+    - sized_box_for_whitespace
+    - sized_box_shrink_expand
+    - sort_child_properties_last
+    - type_annotate_public_apis
+    - type_init_formals
+    - unnecessary_brace_in_string_interps
+    - unnecessary_late
+    - use_colored_box
+    - use_decorated_box
+    - use_is_even_rather_than_modulo
+    - use_named_constants
 
-# Additional information about this file can be found at
-# https://dart.dev/guides/language/analysis-options
+analyzer:
+  errors:
+    missing_required_param: error
+    parameter_assignments: error
+    missing_return: error
+  language:
+    strict-casts: true
