--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   #text
   auto_size_text: ^3.0.0
 
-  #state menegement
+  #state management
   provider: ^6.0.5
 dev_dependencies:
   flutter_test:
