--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   #images
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.7
@@ -20,13 +21,26 @@ dependencies:
 
   #state management
   provider: ^6.0.5
+  equatable: ^2.0.5
+  uuid: ^4.1.0
+  flutter_bloc: ^8.1.3
+  get_it: ^7.6.4
+
+  #json
+  json_annotation: ^4.8.1
+
+  #camera
+  camera: ^0.10.5+4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.6
+  json_serializable: ^6.7.1
 
 flutter:
   uses-material-design: true
   assets:
-     - assets/env/
-     - assets/images/
+    - assets/env/
+    - assets/images/
