--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   #images
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.7
+  signature: ^5.4.0
+  image: ^4.1.3
 
   #permission
   permission_handler: ^11.0.0
