--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   signature: ^5.4.0
   image: ^4.1.3
 
+  #env
+  flutter_dotenv: ^5.1.0
+
   #permission
   permission_handler: ^11.0.0
 
@@ -50,3 +53,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/env/
