--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   http: ^1.1.0
   internet_connection_checker: ^1.0.0+1
 
+  #loader
+  loader_overlay: ^2.3.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
